--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body{
+  min-height: 100%;
+  background: url(../img/cat-bkg-edited.png);
+}
+
 * {
   border-radius: 0 !important;
 }
@@ -40,7 +45,7 @@
 }
 .output {
   padding: 10px;
-  background-color: #3F4152;
+  background-color: #272636;
   text-align: center;
   text-transform: uppercase;
 }
